# pmalloc

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.md
.circleci/: config.yml
example/: example_basic.c  example_suballocation.c
src/: pmalloc.c  pmalloc.h  pmalloc_test.cc
